Fix dock style * Add custom default cursor over entire dock * Fix "Not by AI" badge spacing

--- a/assets/stylesheets/sass/dock.sass
+++ b/assets/stylesheets/sass/dock.sass
@@ -44,7 +44,6 @@ $badge-opacity: 0.57
   display: flex
   width: $badge-width
   cursor: vars.$pointer-cursor
-  margin: 0 calc(vars.$padding-one-and-half + vars.$border-thickness) // Original padding + close button left offset + button border thickness
 
   &-close
     position: absolute
@@ -77,7 +76,8 @@ $badge-opacity: 0.57
     opacity: $badge-opacity
     align-self: center // Center vertically
     transition: opacity vars.$transition-half ease-in-out
-    width: auto
+    width: min-content
+    margin: 0 calc(vars.$padding-one-and-half + vars.$border-thickness) // Original padding + close button left offset + button border thickness
 
     &:hover
       opacity: 1.0
@@ -110,6 +110,7 @@ footer
   border-radius: $dock-border-radius
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25)
   backdrop-filter: blur(1.3rem)
+  cursor: vars.$default-cursor
   @include mix.disable-select()
   
   .icon
@@ -125,7 +126,10 @@ footer
     > *:nth-child(1)
       grid-row: 1
       grid-column: repeat(auto-fit, minmax(calc(1.0 * vars.$dock-icon-size), 1fr)) // 1
-
+    
+    a, img
+      cursor: vars.$default-cursor
+    
     img
       grid-column: 1 / -1
       grid-row: 1 / -1
